Adjust content syndicate item markup in the home page style guide
The excerpt was nested in the byline tag - I'm going to say that
was unintentional :)

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -85,13 +85,21 @@
 									</figure>
 									<header class="content-item-title">
 										<a href="#">Digital Stories in the Mediterranean</a>
-									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span></span>
+									</header>
+									<span class="content-item-byline">
+										<span class="content-item-byline-date">September 10, 2017</span>
+									</span>
+									<span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
 									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
 									<header class="content-item-title">
 										<a href="#">Digital Stories in the Mediterranean</a>
-									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span></span>
+									</header>
+									<span class="content-item-byline">
+										<span class="content-item-byline-date">September 10, 2017</span>
+									</span>
+									<span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
 									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
@@ -100,7 +108,11 @@
 									</figure>
 									<header class="content-item-title">
 										<a href="#">Digital Stories in the Mediterranean</a>
-									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span></span>
+									</header>
+									<span class="content-item-byline">
+										<span class="content-item-byline-date">September 10, 2017</span>
+									</span>
+									<span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
 									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
@@ -109,7 +121,11 @@
 									</figure>
 									<header class="content-item-title">
 										<a href="#">Digital Stories in the Mediterranean</a>
-									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span></span>
+									</header>
+									<span class="content-item-byline">
+										<span class="content-item-byline-date">September 10, 2017</span>
+									</span>
+									<span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 							</div>
 						</div>
