Remove anchors from content syndicate item categories in style guide

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -91,7 +91,7 @@
 						<div class="column one" style="">
 							<div class="content-syndicate-wrapper">
 								<article class="content-syndicate-item">
-									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
+									<span class="content-item-categories">News &amp; Updates</span>
 									<figure class="content-item-image">
 										<a href="https://murrow.wsu.edu/posts/digital-stories-in-the-mediterranean/"><img alt="Students in Greece - 2017" src="https://s3.wp.wsu.edu/uploads/sites/880/2017/09/IMG_2126-396x228.jpg"></a>
 									</figure>
@@ -100,13 +100,13 @@
 									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span></span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
-									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
+									<span class="content-item-categories">News &amp; Updates</span>
 									<header class="content-item-title">
 										<a href="#">Digital Stories in the Mediterranean</a>
 									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span></span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
-									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
+									<span class="content-item-categories">News &amp; Updates</span>
 									<figure class="content-item-image">
 										<a href="https://murrow.wsu.edu/posts/digital-stories-in-the-mediterranean/"><img alt="Students in Greece - 2017" src="https://s3.wp.wsu.edu/uploads/sites/880/2017/09/IMG_2126-396x228.jpg"></a>
 									</figure>
@@ -115,7 +115,7 @@
 									</header><span class="content-item-byline"><span class="content-item-byline-date">September 10, 2017</span></span> <span class="content-item-excerpt">Students apply their digital storytelling skills to support local businesses during study abroad experience in Greece.</span>
 								</article>
 								<article class="content-syndicate-item">
-									<span class="content-item-categories"><a href="#">News &amp; Updates</a></span>
+									<span class="content-item-categories">News &amp; Updates</span>
 									<figure class="content-item-image">
 										<a href="https://murrow.wsu.edu/posts/digital-stories-in-the-mediterranean/"><img alt="Students in Greece - 2017" src="https://s3.wp.wsu.edu/uploads/sites/880/2017/09/IMG_2126-396x228.jpg"></a>
 									</figure>
