Add `top-four` class to top 4 on category pages

--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -98,7 +98,7 @@
 				</div><!--/column-->
 
 			</section>
-			<section class="row single gutter pad-top">
+			<section class="row single gutter pad-top top-four">
 				<div class="column one">
 					<div class="content-syndicate-wrapper">
 						<article class="content-syndicate-item">
