Update structure and style for headers.

--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -57,15 +57,13 @@
 
 <div id="jacket" class="style-skeletal colors-default spacing-default">
 	<div id="binder" class="fluid folio max-1386">
+		<header class="site-header">
+			<div class="site-title">WSU Insider beta</div>
+		</header>
 		<main id="wsuwp-main" class="spine-category-index">
 
-			<header class="main-header">
-				<div class="header-group hgroup guttered padded-bottom short">
-
-					<sup class="sup-header" data-section="News" data-pagetitle="WSU in the spotlight" data-posttitle="WSU in the spotlight" data-default="&lt;a href=&quot;https://news.wsu.edu/insider/&quot; rel=&quot;home&quot;&gt;WSU Insider&lt;/a&gt;" data-alternate=""><span class="sup-header-default"><a href="https://news.wsu.edu/insider/" rel="home">WSU Insider</a></span></sup>
-					<sub class="sub-header" data-sitename="WSU Insider" data-pagetitle="WSU in the spotlight" data-posttitle="WSU in the spotlight" data-default="Cheers" data-alternate=""><span class="sub-header-default">Cheers</span></sub>
-
-				</div>
+			<header class="page-header">
+				<h1>Cheers</h1>
 			</header>
 
 			<section class="row single gutter pad-top news-features">
