--- a/style-guide/post.html
+++ b/style-guide/post.html
@@ -59,6 +59,9 @@
 
 	<div id="jacket" class="style-skeletal colors-default spacing-default">
 		<div id="binder" class="fluid folio max-1386">
+			<header class="site-header">
+				<div class="site-title">WSU Insider beta</div>
+			</header>
 
 			<main id="wsuwp-main">
 
