--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -79,7 +79,7 @@
 						</div>
 					</div><!--/column-->
 				</section>
-				<section class="row single gutter pad-top top-four">
+				<section class="row single gutter pad-top top-four bottom-divider">
 					<div class="column one">
 						<div class="deck">
 							<article class="card card-news">
@@ -121,7 +121,10 @@
 				</section>
 				<section class="row single gutter pad-top news-river">
 					<div class="column one">
-						<div class="deck">
+						<header>
+							<h2>More Cheers</h2>
+						</header>
+						<div class="deck deck--river">
 							<article class="card card-news">
 								<span class="card-categories"><a href="https://news.wsu.edu/insider/category/cheers/">Cheers</a></span>
 								<header class="card-title">
