Change .deck--river` to `.deck--list`

--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -124,7 +124,7 @@
 						<header>
 							<h2>More Cheers</h2>
 						</header>
-						<div class="deck deck--river">
+						<div class="deck deck--list">
 							<article class="card card-news">
 								<span class="card-categories"><a href="https://news.wsu.edu/insider/category/cheers/">Cheers</a></span>
 								<header class="card-title">
