--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -81,7 +81,7 @@
 						</div>
 					</div><!--/column-->
 				</section>
-				<section class="row single gutter pad-top top-four bottom-divider">
+				<section class="row single gutter pad-top bottom-divider">
 					<div class="column one">
 						<div class="deck">
 							<article class="card card-news">
