Remove unused cat-sec class from all markup

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -156,7 +156,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top cat-sec">
+					<section class="row single gutter pad-top">
 						<div class="column one">
 
 							<header>
@@ -242,7 +242,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top bg-none cat-sec">
+					<section class="row single gutter pad-top bg-none">
 						<div class="column one">
 
 							<header>
@@ -334,7 +334,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top bottom-divider cat-sec">
+					<section class="row single gutter pad-top bottom-divider">
 						<div class="column one">
 
 							<header>
@@ -387,7 +387,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top cat-sec bottom-divider">
+					<section class="row single gutter pad-top bottom-divider">
 						<div class="column one">
 
 							<header>
@@ -419,7 +419,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top bottom-divider cat-sec">
+					<section class="row single gutter pad-top bottom-divider">
 						<div class="column one">
 
 							<header>
@@ -505,7 +505,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top bottom-divider cat-sec">
+					<section class="row single gutter pad-top bottom-divider">
 						<div class="column one">
 
 							<header>
@@ -597,7 +597,7 @@
 						</div>
 					</section>
 
-					<section class="row single gutter pad-top cat-sec">
+					<section class="row single gutter pad-top">
 						<div class="column one">
 
 							<header>
