Insider mark on interior pages links to homepage.

--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -55,9 +55,9 @@
 	<div class="style-skeletal colors-default spacing-default" id="jacket">
 		<div class="fluid folio max-1386" id="binder">
 			<header class="site-header">
-				<div class="site-title">
-					WSU Insider beta
-				</div>
+				<a href="https://insider.wsu.edu" class="site-title">
+					WSU Insider
+				</a>
 			</header>
 			<main class="spine-category-index" id="wsuwp-main">
 				<header class="page-header">
