--- a/style-guide/post.html
+++ b/style-guide/post.html
@@ -60,7 +60,7 @@
 	<div id="jacket" class="style-skeletal colors-default spacing-default">
 		<div id="binder" class="fluid folio max-1386">
 			<header class="site-header">
-				<div class="site-title">WSU Insider beta</div>
+				<a href="https://insider.wsu.edu" class="site-title">WSU Insider</a>
 			</header>
 
 			<main id="wsuwp-main">
