Update Category and Announcements style guides with description output

--- a/style-guide/announcements.html
+++ b/style-guide/announcements.html
@@ -50,7 +50,7 @@
 	           }
 	</style></noscript>
 </head>
-<body class="archive category category-cheers category-405 domain-wp-wsu-dev path-internal-news not-single five3 ten4 twenty2">
+<body class="archive post-type-archive post-type-archive-wsu_announcement path-news-internal not-single five3 ten10 twenty6">
 	<a class="screen-reader-shortcut" href="#wsuwp-main">Skip to main content</a> <a class="screen-reader-shortcut" href="#spine-sitenav">Skip to navigation</a>
 	<div class="style-skeletal colors-default spacing-default" id="jacket">
 		<div class="fluid folio max-1386" id="binder">
@@ -62,6 +62,9 @@
 			<main class="spine-category-index" id="wsuwp-main">
 				<header class="page-header">
 					<h1>Announcements</h1>
+					<div class="description">
+						<p>January 25, 2018</p>
+					</div>
 				</header>
 				<section class="row single gutter pad-top news-river">
 					<div class="column one">
