--- a/style-guide/category.html
+++ b/style-guide/category.html
@@ -62,6 +62,9 @@
 			<main class="spine-category-index" id="wsuwp-main">
 				<header class="page-header">
 					<h1>Cheers</h1>
+					<div class="description">
+						<p>Celebrating the accomplishments of fellow Cougs.</p>
+					</div>
 				</header>
 				<section class="row single gutter pad-top">
 					<div class="column one">
