--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -105,7 +105,7 @@
 							</div>
 						</div>
 					</section>
-					<section class="row single gutter pad-top news-features">
+					<section class="row single gutter pad-top news-features bottom-divider">
 						<div class="column one multi-deck">
 							<div class="deck deck-features">
 								<article class="card card--news">
