--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -68,7 +68,7 @@
 									<path class="cls-2" d="M2.43 13.91h6.64l1.36 10.71c.27 2.57.57 5.13.83 7.7h.15c.45-2.57.91-5.17 1.36-7.7l2.34-10.71h5.43l2.34 10.71c.45 2.46.91 5.1 1.36 7.7h.15c.27-2.6.57-5.21.83-7.7l1.36-10.71h6.19l-4.08 24.52h-8.22l-1.89-9.73c-.38-1.89-.68-3.93-.9-5.74h-.16c-.26 1.81-.52 3.85-.9 5.74l-1.81 9.73H6.73zM32.46 35.38l3.7-4.46a10 10 0 0 0 5.74 2.38c2 0 2.79-.64 2.79-1.73s-1.25-1.57-3.32-2.38l-3.06-1.28a7.26 7.26 0 0 1-4.94-6.83c0-4.19 3.77-7.62 9.13-7.62a11.77 11.77 0 0 1 8.15 3.28l-3.24 4.07A8.09 8.09 0 0 0 42.5 19c-1.58 0-2.56.57-2.56 1.66s1.39 1.58 3.62 2.45l3 1.17c3.05 1.21 4.79 3.32 4.79 6.72 0 4.15-3.47 7.84-9.58 7.84a14.26 14.26 0 0 1-9.31-3.46zM53.22 26.59V13.91h6.49v13.43c0 4.38 1.13 6 3.69 6s3.78-1.58 3.78-6V13.91h6.26v12.68c0 8.37-3.17 12.29-10 12.29S53.22 35 53.22 26.59zM85.18 13.91h6.49v24.52h-6.49zM95.22 13.91h6.64l5.43 10.94 2.34 5.51h.15A88.54 88.54 0 0 1 109 21v-7.09h6.19v24.52h-6.69l-5.43-11-2.34-5.43h-.15a92.26 92.26 0 0 1 .83 9.36v7.09h-6.19zM117.18 35.38l3.69-4.46a10 10 0 0 0 5.74 2.38c2 0 2.79-.64 2.79-1.73s-1.24-1.55-3.32-2.38l-3-1.28a7.25 7.25 0 0 1-5-6.83c0-4.19 3.78-7.62 9.13-7.62a11.75 11.75 0 0 1 8.15 3.28l-3.24 4.07a8.09 8.09 0 0 0-4.91-1.81c-1.58 0-2.56.56-2.56 1.66s1.39 1.58 3.62 2.45l3 1.17c3.04 1.25 4.73 3.36 4.73 6.72 0 4.15-3.47 7.84-9.58 7.84a14.21 14.21 0 0 1-9.24-3.46zM138.08 13.91h6.49v24.52h-6.49zM148.12 13.91h7.24c7.47 0 12.6 3.47 12.6 12.15s-5.13 12.37-12.22 12.37h-7.62zM155 33.23c3.55 0 6.34-1.44 6.34-7.17s-2.79-6.95-6.34-6.95h-.38v14.12zM170 13.91h15.85v5.43h-9.36v3.85h8v5.43h-8V33h9.74v5.43H170zM189.06 13.91h9.28c5.29 0 9.81 1.81 9.81 7.92a7.51 7.51 0 0 1-4 7.09l5.32 9.51h-7.24L198 30.21h-2.49v8.22h-6.49zm8.83 11.17c2.57 0 3.93-1.14 3.93-3.25S200.46 19 197.89 19h-2.34v6z"/>
 								</g>
 							</svg>
-							<p class="insider-description">News and information for faculty and staff throughout the WSU system</p>
+							<p class="insider-description">News and information for faculty, staff, and the WSU Community</p>
 						</div>
 						<div class="column two">
 							<div id="mc_embed_signup">
@@ -771,6 +771,65 @@ Narrative and Counter-Narrative in Commemorative Performance</a>
 							<p><a class="button" href="https://news.wsu.edu/insider/category/cheers/">View all Cheers</a></p>
 						</div>
 					</section>
+					<footer class="row single gutter pad-top bg-none site-footer">
+						<div class="column one">
+							<div class="deck">
+								<article class="card card--nav">
+									<ul>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+									</ul>
+								</article>
+								<article class="card card--nav">
+									<ul>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+										<li><a href="#">Navigation item</a>
+										</li>
+									</ul>
+								</article>
+								<article class="card card--news">
+									<div id="mc_embed_signup">
+										<form action="//wsu.us3.list-manage.com/subscribe/post?u=02b3cd67989caec2eec47f036&amp;id=21d653f16c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+											<div id="mc_embed_signup_scroll">
+												<label for="mce-EMAIL">Sign up for the WSU Insider daily email</label>
+												<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="">
+												<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+												<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02b3cd67989caec2eec47f036_21d653f16c" tabindex="-1" value=""></div>
+												<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+											</div>
+										</form>
+									</div>
+								</article>
+								<article class="card card--news">
+									<svg id="wsu-insider-coug-head-mark" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 266.4 48.71">
+										<defs></defs>
+										<g fill="#fff">
+											<path class="cls-1" d="M247.34 45.39s2.2-.94 3.41-4.59a9 9 0 0 1 .78 4.5 28.55 28.55 0 0 1-4.19.09zM256.55 38.06C250.11 39 249 25.45 249 25.45s2.16 6.91 6.76 6.66c4.76-.24 3.41-7.57 3.41-7.57s4.63 12.52-2.62 13.52zM227 35a56.06 56.06 0 0 1-6.19 1.46s3.68-2.78 6.42-11.38l2.65 2.39-.5 1.64a12.34 12.34 0 0 1 1.58 3 7.9 7.9 0 0 0-.17-6.93l-.34 1-1-.94-1.78-1.63a22.33 22.33 0 0 1 3.32-6.25l.24.26 2 2.37-.61 1a26.07 26.07 0 0 1 2.59 3.29 15 15 0 0 0-.25-6.26l-.92.86-2.27-2.63a25.08 25.08 0 0 1 10.06-6.4 7.36 7.36 0 0 0-.64.81c-1.27 1.78-2.55 5-1.51 10.19.15.82.43 2 .71 3.18.55 2.37 1.17 5.06 1.39 6.75.44 3.53.08 5.84-1.09 7.07a5.09 5.09 0 0 1-4 1.16v-.84a18.17 18.17 0 0 0-.53-4.46l-.49-1.71-.77 1.59c-1.21 2.52-5.33 8.78-10.69 10A18.06 18.06 0 0 0 227 35z"></path>
+											<path class="cls-1" d="M257.9 11.73l-.06-.35 6.2-1.24-.11-.69-6.39.8c0-.12-.08-.25-.13-.37l5.84-2.27L263 7l-6.11 1.89a2.87 2.87 0 0 0-1.15-1.21c-2.33.18-4.44.37-6.37.62l1.22-5.72H250l-1.87 5.9-1 .17 1.46-6.4h-.69l-2.15 6.66h-.08a6.82 6.82 0 0 0-3.39 2.58c-1.11 1.58-2.24 4.45-1.3 9.19.17.79.43 1.92.71 3.13.56 2.4 1.19 5.13 1.41 6.89.51 4 0 6.59-1.45 8.14-1.21 1.26-3.08 1.76-5.7 1.53l-.66-.06.06-.65a13.45 13.45 0 0 0 .06-1.4 17.79 17.79 0 0 0-.16-2.37 23.2 23.2 0 0 1-7.44 7.76 110.34 110.34 0 0 1 13.7 1.48l.73.07h.25a10.72 10.72 0 0 0 1.63-.08h.26c3.18-.55 5.93-2.9 5.19-8.35-.87-6.47-2-10.59-2.29-13.7-.35-3.78 2.93-9.64 8.76-7a9.27 9.27 0 0 1 1.87 3.16 8.73 8.73 0 0 0-.18-4 6.72 6.72 0 0 0 .27-2.33l6.36-.27v-.7zm-6.46 2.32a9.16 9.16 0 0 0-5.51 1.44 7.33 7.33 0 0 0-2.08 2.39 4 4 0 0 1 1.63-3.88 8.35 8.35 0 0 1 6.36-.33c.56.33.16.42-.4.38z"></path>
+										</g>
+										<g fill="#fff">
+											<path class="cls-2" d="M2.43 13.91h6.64l1.36 10.71c.27 2.57.57 5.13.83 7.7h.15c.45-2.57.91-5.17 1.36-7.7l2.34-10.71h5.43l2.34 10.71c.45 2.46.91 5.1 1.36 7.7h.15c.27-2.6.57-5.21.83-7.7l1.36-10.71h6.19l-4.08 24.52h-8.22l-1.89-9.73c-.38-1.89-.68-3.93-.9-5.74h-.16c-.26 1.81-.52 3.85-.9 5.74l-1.81 9.73H6.73zM32.46 35.38l3.7-4.46a10 10 0 0 0 5.74 2.38c2 0 2.79-.64 2.79-1.73s-1.25-1.57-3.32-2.38l-3.06-1.28a7.26 7.26 0 0 1-4.94-6.83c0-4.19 3.77-7.62 9.13-7.62a11.77 11.77 0 0 1 8.15 3.28l-3.24 4.07A8.09 8.09 0 0 0 42.5 19c-1.58 0-2.56.57-2.56 1.66s1.39 1.58 3.62 2.45l3 1.17c3.05 1.21 4.79 3.32 4.79 6.72 0 4.15-3.47 7.84-9.58 7.84a14.26 14.26 0 0 1-9.31-3.46zM53.22 26.59V13.91h6.49v13.43c0 4.38 1.13 6 3.69 6s3.78-1.58 3.78-6V13.91h6.26v12.68c0 8.37-3.17 12.29-10 12.29S53.22 35 53.22 26.59zM85.18 13.91h6.49v24.52h-6.49zM95.22 13.91h6.64l5.43 10.94 2.34 5.51h.15A88.54 88.54 0 0 1 109 21v-7.09h6.19v24.52h-6.69l-5.43-11-2.34-5.43h-.15a92.26 92.26 0 0 1 .83 9.36v7.09h-6.19zM117.18 35.38l3.69-4.46a10 10 0 0 0 5.74 2.38c2 0 2.79-.64 2.79-1.73s-1.24-1.55-3.32-2.38l-3-1.28a7.25 7.25 0 0 1-5-6.83c0-4.19 3.78-7.62 9.13-7.62a11.75 11.75 0 0 1 8.15 3.28l-3.24 4.07a8.09 8.09 0 0 0-4.91-1.81c-1.58 0-2.56.56-2.56 1.66s1.39 1.58 3.62 2.45l3 1.17c3.04 1.25 4.73 3.36 4.73 6.72 0 4.15-3.47 7.84-9.58 7.84a14.21 14.21 0 0 1-9.24-3.46zM138.08 13.91h6.49v24.52h-6.49zM148.12 13.91h7.24c7.47 0 12.6 3.47 12.6 12.15s-5.13 12.37-12.22 12.37h-7.62zM155 33.23c3.55 0 6.34-1.44 6.34-7.17s-2.79-6.95-6.34-6.95h-.38v14.12zM170 13.91h15.85v5.43h-9.36v3.85h8v5.43h-8V33h9.74v5.43H170zM189.06 13.91h9.28c5.29 0 9.81 1.81 9.81 7.92a7.51 7.51 0 0 1-4 7.09l5.32 9.51h-7.24L198 30.21h-2.49v8.22h-6.49zm8.83 11.17c2.57 0 3.93-1.14 3.93-3.25S200.46 19 197.89 19h-2.34v6z"></path>
+										</g>
+									</svg>
+								</article>
+							</div>
+						</div>
+					</footer>
 				</div><!-- #post -->
 			</main>
 
