Footer, newlestter signup, logo link

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -71,17 +71,7 @@
 							<p class="insider-description">News and information for faculty, staff, and the WSU Community</p>
 						</div>
 						<div class="column two">
-							<div id="mc_embed_signup">
-								<form action="//wsu.us3.list-manage.com/subscribe/post?u=02b3cd67989caec2eec47f036&amp;id=21d653f16c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-									<div id="mc_embed_signup_scroll">
-										<label for="mce-EMAIL">Sign up for the WSU Insider daily email</label>
-										<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-										<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02b3cd67989caec2eec47f036_21d653f16c" tabindex="-1" value=""></div>
-										<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-									</div>
-								</form>
-							</div>
+							
 						</div>
 					</section>
 
@@ -105,7 +95,7 @@
 							</div>
 						</div>
 					</section>
-					<section class="row single gutter pad-top news-features bottom-divider">
+					<section class="row single gutter pad-top news-features">
 						<div class="column one multi-deck">
 							<div class="deck deck-features">
 								<article class="card card--news">
@@ -229,6 +219,22 @@ Narrative and Counter-Narrative in Commemorative Performance</a>
 									
 								</article>
 								<a href="https://calendar.wsu.edu" class="button">View all upcoming events</a>
+							</div>
+						</div>
+					</section>
+
+					<section class="row single gutter pad-top bg-none">
+						<div class="column one">
+							<div id="mc_embed_signup">
+								<form action="//wsu.us3.list-manage.com/subscribe/post?u=02b3cd67989caec2eec47f036&amp;id=21d653f16c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+									<div id="mc_embed_signup_scroll">
+										<label for="mce-EMAIL">Sign up for the WSU Insider daily email</label>
+										<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="">
+										<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02b3cd67989caec2eec47f036_21d653f16c" tabindex="-1" value=""></div>
+										<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+									</div>
+								</form>
 							</div>
 						</div>
 					</section>
@@ -774,7 +780,7 @@ Narrative and Counter-Narrative in Commemorative Performance</a>
 					<footer class="row single gutter pad-top bg-none site-footer">
 						<div class="column one">
 							<div class="deck">
-								<article class="card card--nav">
+								<nav class="card card--nav">
 									<ul>
 										<li><a href="#">Navigation item</a>
 										</li>
@@ -787,8 +793,6 @@ Narrative and Counter-Narrative in Commemorative Performance</a>
 										<li><a href="#">Navigation item</a>
 										</li>
 									</ul>
-								</article>
-								<article class="card card--nav">
 									<ul>
 										<li><a href="#">Navigation item</a>
 										</li>
@@ -801,21 +805,8 @@ Narrative and Counter-Narrative in Commemorative Performance</a>
 										<li><a href="#">Navigation item</a>
 										</li>
 									</ul>
-								</article>
-								<article class="card card--news">
-									<div id="mc_embed_signup">
-										<form action="//wsu.us3.list-manage.com/subscribe/post?u=02b3cd67989caec2eec47f036&amp;id=21d653f16c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
-											<div id="mc_embed_signup_scroll">
-												<label for="mce-EMAIL">Sign up for the WSU Insider daily email</label>
-												<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required="">
-												<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-												<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_02b3cd67989caec2eec47f036_21d653f16c" tabindex="-1" value=""></div>
-												<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-											</div>
-										</form>
-									</div>
-								</article>
-								<article class="card card--news">
+								</nav>
+								<article class="card card--mark">
 									<svg id="wsu-insider-coug-head-mark" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 266.4 48.71">
 										<defs></defs>
 										<g fill="#fff">
