Implement a common footer throughout the theme

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -776,30 +776,36 @@
 						<div class="column one">
 							<div class="deck">
 								<nav class="card card--nav">
-									<ul>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-									</ul>
-									<ul>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-										<li><a href="#">Navigation item</a>
-										</li>
-									</ul>
+									<div class="nav-group">
+										<header>Group One Head</header>
+										<ul>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+											</ul>
+									</div>
+									<div class="nav-group">
+										<header>Group Two Head</header>
+										<ul>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+												<li><a href="#">Navigation item</a>
+												</li>
+											</ul>
+									</div>
 								</nav>
 								<article class="card card--mark">
 									<svg id="wsu-insider-coug-head-mark" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 266.4 48.71">
