Remmove extra HTML from home page header

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -54,7 +54,7 @@
 		<div class="fluid folio max-1386" id="binder">
 			<main class="spine-blank-template" id="wsuwp-main">
 				<div>
-					<section class="row halves gutter top-head bottom-divider">
+					<section class="row single gutter top-head bottom-divider">
 						<div class="column one">
 							<svg id="wsu-insider-coug-head-mark" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 266.4 48.71">
 							  <defs/>
@@ -67,9 +67,6 @@
 								</g>
 							</svg>
 							<p class="insider-description">News and information for faculty, staff, and the WSU Community</p>
-						</div>
-						<div class="column two">
-
 						</div>
 					</section>
 
